fix(1709): Chat ui overlap

--- a/GUI/src/components/Chat/Chat.scss
+++ b/GUI/src/components/Chat/Chat.scss
@@ -105,8 +105,8 @@
     display: flex;
     flex-direction: column;
     gap: 4px;
-    padding-left: 56px;
     position: relative;
+    padding-left: 0px !important;
 
     &:not(:last-child) {
       margin-bottom: 8px;
@@ -148,9 +148,13 @@
     &--buerokratt,
     &--chatbot {
       #{$self} {
+        &__group-header {
+          align-items: center;
+        }
+
         &__group-initials {
           background-color: get-color(sapphire-blue-10);
-          left: 0;
+          position: relative;
         }
 
         &__group-name {
@@ -158,6 +162,7 @@
           text-align: left;
           margin-left: 0;
           font-size: $veera-font-size-100;
+          padding-top: 0;
         }
 
         &__messages {
@@ -165,6 +170,7 @@
           flex-direction: column;
           gap: 4px;
           align-items: flex-start;
+          padding-left: 50px;
         }
 
         &__message-text {
@@ -185,18 +191,57 @@
       }
     }
 
+    &--end-user {
+      #{$self} {
+        &__group-header {
+          display: flex;
+          justify-content: flex-end;
+          align-items: center;
+        }
+      }
+
+      &__messages {
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+        align-items: flex-end;
+        padding-left: 50px !important;
+      }
+
+      &__message-text {
+        background-color: get-color(black-coral-10);
+        color: get-color(white);
+
+        :any-link {
+          background: url('../../static/icons/link-external-white.svg') no-repeat right center;
+          padding-right: 1.25em;
+          color: white;
+          text-decoration: underline;
+        }
+
+        &:hover {
+          background-color: #535665;
+        }
+      }
+    }
+
     &--backoffice-user {
       #{$self} {
+        &__group-header {
+          align-items: center;
+        }
+
         &__group-initials {
           background-color: get-color(black-coral-10);
           color: get-color(white);
-          left: 0;
+          position: relative;
         }
 
         &__group-name {
           text-align: left;
           margin-left: 0;
           font-size: $veera-font-size-100;
+          padding-top: 0;
         }
 
         &__messages {
@@ -204,6 +249,7 @@
           flex-direction: column;
           gap: 4px;
           align-items: flex-start;
+          padding-left: 50px;
         }
 
         &__message-text {
@@ -227,6 +273,13 @@
         }
       }
     }
+  }
+
+  &__group-header {
+    display: flex;
+    align-items: flex-start;
+    gap: 12px;
+    min-height: 40px;
   }
 
   &__group-initials {
@@ -254,7 +307,10 @@
     margin-left: 10rem;
     margin-right: 3rem;
     text-align: right;
-    padding-top: 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
   }
 
   &__messages {
@@ -262,6 +318,7 @@
     flex-direction: column;
     gap: 4px;
     align-items: flex-end;
+    padding-left: 50px;
   }
 
   &__messageContainer {
